// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dependency-side-bar 1`] = `

<aside class="flex w-full flex-col">
  <div class="border-background-secondary flex h-12 w-full items-center justify-between border-b px-6 py-3">
    <h3 class="text-sm font-medium">
      <span class="mr-2">
        Dependencies
      </span>
      <gui-number-flow
        start="3"
        end="3"
        format="[object Object]"
        motionconfig="[object Object]"
        classnames="[object Object]"
      >
      </gui-number-flow>
      <span class="text-muted-foreground font-mono text-sm tabular-nums">
        /
      </span>
      <gui-number-flow
        start="3"
        end="3"
        format="[object Object]"
        motionconfig="[object Object]"
        classnames="[object Object]"
      >
      </gui-number-flow>
    </h3>
  </div>
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <div class="flex flex-col gap-4 px-6 py-3">
    <gui-side-item
      item="GridItemData { @vltpkg/semver }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { abbrev }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { simple-output }"
      dependencies="true"
    >
    </gui-side-item>
  </div>
</aside>

`;

exports[`dependency-side-bar has both installed and uninstalled deps 1`] = `

<aside class="flex w-full flex-col">
  <div class="border-background-secondary flex h-12 w-full items-center justify-between border-b px-6 py-3">
    <h3 class="text-sm font-medium">
      <span class="mr-2">
        Dependencies
      </span>
      <gui-number-flow
        start="3"
        end="3"
        format="[object Object]"
        motionconfig="[object Object]"
        classnames="[object Object]"
      >
      </gui-number-flow>
      <span class="text-muted-foreground font-mono text-sm tabular-nums">
        /
      </span>
      <gui-number-flow
        start="3"
        end="3"
        format="[object Object]"
        motionconfig="[object Object]"
        classnames="[object Object]"
      >
      </gui-number-flow>
    </h3>
  </div>
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <div class="flex flex-col gap-4 px-6 py-3">
    <gui-side-item
      item="GridItemData { @vltpkg/semver }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { abbrev }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { simple-output }"
      dependencies="true"
    >
    </gui-side-item>
  </div>
  <div class="flex flex-col">
    <div class="border-background-secondary relative flex h-12 w-full items-center border-b px-6 border-t">
      <gui-cross
        top="true"
        left="true"
      >
      </gui-cross>
      <gui-cross
        bottom="true"
        left="true"
      >
      </gui-cross>
      <h3 class="text-muted-foreground text-sm font-medium">
        Uninstalled
      </h3>
    </div>
    <div class="flex flex-col gap-4 px-6 py-3">
      <gui-side-item
        item="GridItemData { @ruyadorno/redact }"
        dependencies="false"
      >
      </gui-side-item>
      <gui-side-item
        item="GridItemData { ntl }"
        dependencies="false"
      >
      </gui-side-item>
    </div>
  </div>
</aside>

`;

exports[`dependency-side-bar has uninstalled deps only 1`] = `

<aside class="flex w-full flex-col">
  <div class="border-background-secondary flex h-12 w-full items-center justify-between border-b px-6 py-3">
    <h3 class="text-sm font-medium">
      <span class="mr-2">
        Dependencies
      </span>
      <gui-number-flow
        start="0"
        end="3"
        format="[object Object]"
        motionconfig="[object Object]"
        classnames="[object Object]"
      >
      </gui-number-flow>
      <span class="text-muted-foreground font-mono text-sm tabular-nums">
        /
      </span>
      <gui-number-flow
        start="3"
        end="0"
        format="[object Object]"
        motionconfig="[object Object]"
        classnames="[object Object]"
      >
      </gui-number-flow>
    </h3>
  </div>
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <div class="flex flex-col gap-4 px-6 py-3">
    <gui-side-item
      item="GridItemData { @vltpkg/semver }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { abbrev }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { simple-output }"
      dependencies="true"
    >
    </gui-side-item>
  </div>
  <div class="flex flex-col">
    <div class="border-background-secondary relative flex h-12 w-full items-center border-b px-6 border-t">
      <gui-cross
        top="true"
        left="true"
      >
      </gui-cross>
      <gui-cross
        bottom="true"
        left="true"
      >
      </gui-cross>
      <h3 class="text-muted-foreground text-sm font-medium">
        Uninstalled
      </h3>
    </div>
    <div class="flex flex-col gap-4 px-6 py-3">
      <gui-side-item
        item="GridItemData { @vltpkg/semver }"
        dependencies="false"
      >
      </gui-side-item>
      <gui-side-item
        item="GridItemData { abbrev }"
        dependencies="false"
      >
      </gui-side-item>
      <gui-side-item
        item="GridItemData { simple-output }"
        dependencies="false"
      >
      </gui-side-item>
    </div>
  </div>
</aside>

`;

exports[`dependency-side-bar no items 1`] = `

<aside class="flex w-full flex-col">
  <div class="border-background-secondary flex h-12 w-full items-center justify-between border-b px-6 py-3">
    <h3 class="text-sm font-medium">
      <span class="mr-2">
        Dependencies
      </span>
      <gui-number-flow
        start="0"
        end="0"
        format="[object Object]"
        motionconfig="[object Object]"
        classnames="[object Object]"
      >
      </gui-number-flow>
      <span class="text-muted-foreground font-mono text-sm tabular-nums">
        /
      </span>
      <gui-number-flow
        start="0"
        end="0"
        format="[object Object]"
        motionconfig="[object Object]"
        classnames="[object Object]"
      >
      </gui-number-flow>
    </h3>
  </div>
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <gui-dependency-empty-state>
  </gui-dependency-empty-state>
</aside>

`;
